--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -29,23 +29,15 @@
             border-top: .2rem solid $light-grey;
             border-bottom: .2rem solid $light-grey;
 
+            @media only screen and (min-width: $device-small) {
+                padding: 3rem 6rem;
+            }
+
             & ul {
                 width: 100%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-
-                & a {
-                    color: $orange;
-                    text-transform: uppercase;
-                    font-size: 2.6rem;
-                    font-weight: 700;
-                    transition: $fast-transition;
-
-                    &:hover {
-                        color: $dark-text;
-                    }
-                }
             }
         }
 
