--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,6 +4,10 @@
     gap: 1rem;
     width: 100%;
 
+    @media only screen and (min-width: $device-small) {
+        gap: 2.5rem;
+    }
+
     &__item {
         width: 100%;
         height: 35rem;
@@ -21,9 +25,14 @@
             
             & .name {
                 color: $white;
-                font-weight: 500;
+                font-weight: 600;
                 font-size: 1.4rem;
                 line-height: 2rem;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 2.8rem;
+                    line-height: 2.8rem;
+                }
             }
 
             & .role {
@@ -31,6 +40,11 @@
                 font-weight: 400;
                 font-size: 1.2rem;
                 line-height: 1.7rem;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                }
             }
         }
 
@@ -39,9 +53,14 @@
 
             & .name {
                 color: $light-text;
-                font-weight: 500;
+                font-weight: 600;
                 font-size: 1.4rem;
                 line-height: 2rem;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 2.8rem;
+                    line-height: 2.8rem;
+                }
             }
 
             & .role {
@@ -49,6 +68,11 @@
                 font-weight: 400;
                 font-size: 1.2rem;
                 line-height: 1.7rem;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                }
             }
         }
 
@@ -86,11 +110,12 @@
 
     & .grid {
         margin: 6rem 0;
-
+        
         & .grid__item {
-            opacity: 0;
-            transform: translateY(50%);
-            transition: all 1s ease-in-out;
+
+            @media only screen and (min-width: $device-large) {
+                height: 100rem;
+            }
 
             &::after {
                 content: '';
@@ -118,8 +143,12 @@
 
     & .grid {
         margin-bottom: 3rem;
-        &__item {
 
+        @media only screen and (min-width: $device-small) {
+            margin-bottom: 4rem;
+        }
+
+        &__item {
             padding-top: 2rem;
 
             &::before {
@@ -127,6 +156,10 @@
                 font-size: 10rem;
                 color: rgba(0,0,0,0.1);
                 font-weight: 700;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 18rem;
+                }
             }
 
             &--top {
@@ -135,6 +168,10 @@
                 left: 50%;
                 transform: translateX(-50%);
                 width: 100%;
+
+                @media only screen and (min-width: $device-small) {
+                    top: 12rem;
+                }
             }
 
         }
@@ -152,9 +189,22 @@
         grid-template-columns: 1fr;
         margin-top: 3rem;
 
+        @media only screen and (min-width: $device-small) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 5rem;
+
+        }
+
         &__item {
             height: auto !important;
             text-align: left;
+
+            @media only screen and (min-width: $device-small) {
+                & .text {
+                    width: 100%;
+                }
+    
+            }
 
             &:not(:last-child) {
                 margin-bottom: 3.5rem;
@@ -198,6 +248,10 @@
         gap: 2.5rem;
         margin-top: 6rem;
 
+        @media only screen and (min-width: $device-small) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
         &__item {
             height: 100%;
             width: 100%;
@@ -205,8 +259,12 @@
             display: flex;
             align-items: center;
 
+            @media only screen and (min-width: $device-small) {
+                padding: 4rem 4rem;
+            }
+
             & a {
-                transition: $fast-transition;
+                transition: all .3s ease;
             }
 
             & img {
@@ -214,6 +272,10 @@
                 width: 100%;
                 object-fit: cover;
                 transform: scale(0.8);
+
+                @media only screen and (min-width: $device-small) {
+                    transform: scale(1);
+                }
             }
 
             &:hover a {
@@ -233,6 +295,14 @@
             }
         }
     }
+
+    &__work {
+        & .grid {
+            @media only screen and (min-width: $device-small) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+    }
 }
 
 /* Services */
@@ -242,6 +312,10 @@
 
         &__item {
             overflow: hidden;
+
+            @media only screen and (min-width: $device-small) {
+                height: 66rem;
+            }
 
             &::before {
                 content: '';
