--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,10 +14,13 @@
     }
 
     & .wrapper {
-        // height: 100%;
-        // justify-content: flex-start;
-        // align-items: flex-start;
         flex-direction: column;
+
+        @media only screen and (min-width: $device-small) {
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-direction: row;
+        }
     }
 
     & ul {
@@ -29,32 +32,82 @@
         padding-top: 12rem;
         margin-bottom: 4rem;
 
+        @media only screen and (min-width: $device-small) {
+            padding-top: 20rem;
+            margin-bottom: 0rem;
+            width: 50%;
+        }
+
         & li {
             &:not(:last-child) {
                 margin-bottom: 2rem;
+
+                @media only screen and (min-width: $device-small) {
+                    margin-bottom: 3.5rem;
+                }
             }
         }
 
         & a {
             color: $dark-text;
             font-size: 3.6rem;
-            font-weight: 500;
+            font-weight: 600;
+
+            @media only screen and (min-width: $device-small) {
+                font-size: 3.6rem;
+                line-height: 3.6rem;
+            }
         }
     }
 
     &__bottom {
         padding-bottom: 12rem;
 
+        @media only screen and (min-width: $device-small) {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            padding-top: 20rem;
+            padding-bottom: 0rem;
+            width: 50%;
+        }
+
+        & h6 {
+            color: $dark-grey;
+            font-size: 1.2rem;
+            line-height: 1.2rem;
+            font-weight: 800;
+            text-transform: uppercase;
+            margin-bottom: 2rem;
+        }
+
+        &--top {
+            margin-bottom: 4rem;
+
+            @media only screen and (min-width: $device-small) {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-start;
+                flex-direction: column;
+                margin-bottom: 0rem;
+                width: 50%;
+
+                & ul {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    flex-direction: column;
+                }
+            }            
+        }
+
         &__item {
             &:not(:last-child) {
                 margin-bottom: 4rem;
             }
 
-            & h6 {
-                color: $dark-grey;
-                font-size: 1.2rem;
-                text-transform: uppercase;
-                margin-bottom: 2rem;
+            @media only screen and (min-width: $device-small) {
+                width: 50%;
             }
 
             & li:not(:last-child) {
@@ -64,9 +117,19 @@
             & a {
                 color: $dark-text;
                 font-size: 1.6rem;
-                font-weight: 500;
+                font-weight: 600;
                 text-transform: capitalize;
+
+                @media only screen and (min-width: $device-small) {
+                    font-size: 1.8rem;
+                    line-height: 1.8rem;
+                }
             }
         }
+
+        &--bottom {
+            width: 50%;
+        }
+
     }
 }
