--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,9 +1,13 @@
 .about {
-    height: 100%;
+    height: 60%;
     width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+
+    @media only screen and (min-width: $device-small) {
+        height: 100%;
+    }
 
     & .wrapper {
         position: relative;
@@ -12,6 +16,12 @@
         align-items: flex-start;
         flex-direction: column;
         padding-bottom: 25%;
+
+        @media only screen and (min-width: $device-small) {
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-direction: row;
+        }
 
         &::after {
             content: '';
@@ -26,11 +36,13 @@
 }
 
 .crew {
-    position: relative;
-
     &__img {
-        height: 20rem;
+        height: 25rem;
         width: 100%;
+
+        @media only screen and (min-width: $device-small) {
+            height: 50rem;
+        }
 
         & img {
             height: 100%;
@@ -48,9 +60,30 @@
             flex-direction: column;
             padding: 8rem 0 6rem 0;
 
+            @media only screen and (min-width: $device-small) {
+                justify-content: space-between;
+                align-items: flex-start;
+                flex-direction: row;
+            }
+
             &::before {
                 @include section-line;
             }
+        }
+
+        & .paragraphs {
+            @media only screen and (min-width: $device-small) {
+                width: 50%;
+
+                & p {
+                    width: 100%;
+
+                    &:not(:last-child) {
+                        margin-bottom: 3rem;
+                    }
+                }
+            }
+            
         }
     }
 }
@@ -72,6 +105,12 @@
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
+
+        @media only screen and (min-width: $device-small) {
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-direction: row;
+        }
     }
 }
 
@@ -83,6 +122,10 @@
     & h2 {
         margin: 3rem 0 2rem 4rem;
         text-transform: capitalize;
+
+        @media only screen and (min-width: $device-small) {
+            margin: 3rem 0 2rem 0rem;
+        }
     }
 
     & .wrapper {
@@ -93,6 +136,28 @@
 
         &::before {
             @include section-line;
+        }
+    }
+
+    &__top {
+        @media only screen and (min-width: $device-small) {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+
+            & h3 {
+                width: 50%;
+            }
+        }
+
+        &__content {
+            @media only screen and (min-width: $device-small) {
+                width: 50% !important;
+
+                & p {
+                    width: 100%;
+                }
+            }
         }
     }
 
@@ -122,5 +187,32 @@
     & p {
         font-weight: 500;
         line-height: 1.6;
+    }
+
+    &__top {
+        @media only screen and (min-width: $device-small) {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            width: 100%;
+        }
+    }
+
+    &__content {
+        @media only screen and (min-width: $device-small) {
+            width: 50%;
+
+            & h2 {
+                color: $dark-text;
+                font-size: 2.8rem;
+                line-height: 4.1rem;
+                font-weight: 600;
+                margin-bottom: 3rem;
+            }
+
+            & p {
+                width: 100%;
+            }
+        }
     }
 }
