--- a/sass/pages/_careers.scss
+++ b/sass/pages/_careers.scss
@@ -5,9 +5,21 @@
         width: 100%;
         padding-top: 20rem;
 
+        @media only screen and (min-width: $device-small) {
+            height: 100%;
+            display: flex;
+            align-items: flex-end;
+        }
+
         & .wrapper {
             position: relative;
             height: 100%;
+
+            @media only screen and (min-width: $device-small) {
+                flex-direction: row;
+                height: 50%;
+            }
+        
 
             &::after {
                 content: '';
@@ -27,6 +39,10 @@
         height: 25rem;
         width: 100%;
 
+        @media only screen and (min-width: $device-small) {
+            height: 50rem;
+        }
+
         & img {
             height: 100%;
             width: 100%;
@@ -38,18 +54,32 @@
 /* Open positions */
 .open-positions {
     background-color: $white;
-    padding: 8rem 0 6rem 0rem;
-    position: relative;
-
-    &::before {
-        content: '';
-        @include section-line;
-    }
 
     & .wrapper {
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
+        padding: 8rem 0 6rem 0rem;
+        position: relative;
+
+        @media only screen and (min-width: $device-small) {
+            flex-direction: row;
+        }
+
+        &::before {
+            content: '';
+            @include section-line;
+        }
+    }
+
+    &__inner {
+        @media only screen and (min-width: $device-small) {
+            width: 50%;
+
+            & .text {
+                width: 100%;
+            }
+        }
     }
 }
 
@@ -62,5 +92,19 @@
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
+    }
+}
+
+.stuff-to-note {
+    &__top {
+        display: flex;
+
+        & div {
+            width: 50%;
+
+            & p {
+                width: 100%;
+            }
+        }
     }
 }
