--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,42 +1,3 @@
-/* Loader */
-.loader {
-    position: fixed;
-    top: 0%;
-    right: 0%;
-    bottom: 0%;
-    left: 0%;
-    z-index: 99;
-    height: 100%;
-    width: 100%;
-    background-color: $white;
-    transition: $fast-transition;
-
-    &__inner {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    &--text {
-        color: $light-grey;
-        font-size: 12rem;
-        font-weight: 900;
-        line-height: 1;
-        transition: $fast-transition;
-        text-align: justify;
-        letter-spacing: 1rem;
-        animation: loader-text 3s ease-in-out infinite;
-    }
-}
-
-@keyframes loader-text {
-    0% {color: $light-grey;}
-    50% {color: $grey-text;}
-    100% {color: $light-grey;}
-}
-
 //hero
 .hero {
     height: 100%;
@@ -68,7 +29,12 @@
         
         @media only screen and (min-width: $device-small) {
             justify-content: space-between;
+            align-items: flex-start;
             flex-direction: row;
+        }
+
+        @media only screen and (min-width: $device-large) {
+            padding-bottom: 25rem;
         }
 
         &::after {
@@ -82,28 +48,11 @@
         }
     }
 
-    & .subtitle,
-    & .primary-title {
-        opacity: 0;
-        transform: translateY(50%);
-        transition: $slow-transition;
-        transition-delay: .5s;
-    }
-
-    & .primary-title {
-        transition-delay: .7s;
-    }
-
 }
 
 //what we do
 .what-we-do {
-    // padding: 8rem 0 6rem 0;
     position: relative;
-
-    // @media only screen and (min-width: $device-small) {
-    //     padding: 10rem 0 10rem 0;
-    // }
 
     & .wrapper {
         justify-content: space-between;
@@ -111,41 +60,17 @@
         flex-direction: column;
         padding: 8rem 0 6rem 0;
 
+        @media only screen and (min-width: $device-small) {
+            justify-content: space-between;
+            flex-direction: row;
+            padding: 10rem 0 10rem 0;
+        }
+
         &::before {
             @include section-line;
             height: 0% !important;
             transition: $slow-transition;
         }
-
-        @media only screen and (min-width: $device-small) {
-            justify-content: space-between;
-            flex-direction: row;
-
-            @media only screen and (min-width: $device-small) {
-                padding: 10rem 0 10rem 0;
-            }
-        }
-    }
-
-    & h3 {
-        opacity: 0;
-        transition: $slow-transition;
-
-        @media only screen and (min-width: $device-small) {
-            width: 30%;
-        }
-
-    }
-
-    & p {
-        opacity: 0;
-        transition: $slow-transition;
-        transition-delay: .5s;
-
-        @media only screen and (min-width: $device-small) {
-            width: 70%;
-        }
-
     }
 }
 
@@ -158,22 +83,11 @@
         align-items: flex-start;
         flex-direction: column;
     }
-
-    & h2 {
-        opacity: 0;
-        transition: $slow-transition;
-    }
 }
 
 //home services
 .home-services {
     background-color: $dark-text;
-    // padding-top: 8rem;
-    position: relative;
-
-    // @media only screen and (min-width: $device-small) {
-    //     padding: 12rem 0 10rem 0;
-    // }
 
     & .wrapper {
         justify-content: space-between;
@@ -181,25 +95,15 @@
         flex-direction: column;
         padding-top: 8rem;
 
-        &::before {
-            @include section-line;
-        }
-
         @media only screen and (min-width: $device-small) {
             justify-content: space-between;
             flex-direction: row;
-
-            @media only screen and (min-width: $device-small) {
-                padding: 12rem 0 10rem 0;
-            }
+            padding: 12rem 0 10rem 0;
         }
-    }
 
-    & h3,
-    & h2,
-    & p {
-        opacity: 0;
-        transition: all 1s ease-in-out;
+        &::before {
+            @include section-line;
+        }
     }
 
     & .services-list {
@@ -209,9 +113,6 @@
             padding: 1.5rem 0;
             border-top: .2rem solid $grey-text;
             transition: all .5s ease;
-            opacity: 0;
-            transform: translateY(2.5rem);
-            transition: all .5s ease-in-out;
 
             &:hover {
                 padding: 1.5rem 2rem;
@@ -252,15 +153,13 @@
         }
     }
 
-    & h3 {
-        @media only screen and (min-width: $device-small) {
-            width: 30%;
-        }
-    }
-
     &__content {
         @media only screen and (min-width: $device-small) {
-            width: 70%;
+            width: 50%;
+
+            & p {
+                width: 100%;
+            }
         }
     }
 
@@ -296,18 +195,6 @@
         @media only screen and (min-width: $device-small) {
             flex-direction: row;
         }
-    }
-
-    & h3 {
-        @media only screen and (min-width: $device-small) {
-            width: 30%;
-        }   
-    }
-
-    & p {
-        @media only screen and (min-width: $device-small) {
-            width: 70%;
-        } 
     }
 }
 
@@ -348,6 +235,7 @@
             justify-content: center !important;
             align-items: center !important;
             position: relative !important;
+            cursor: pointer;
             
             &::after,
             &::before {
@@ -389,6 +277,17 @@
 
             &.active {
                 opacity: 1;
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0%;
+                    left: 0%;
+                    height: .5rem;
+                    width: 100%;
+                    background-color: $orange;
+                }
             }
         }
     }
@@ -398,7 +297,7 @@
         padding: 6rem 0;
 
         @media only screen and (min-width: $device-small) {
-            width: 60%;
+            width: 100%;
             margin: 0 auto;
         }
 
@@ -407,26 +306,32 @@
             height: 35rem;
         }
 
+        & .rlyr {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        & .fumo,
+        & .new-legend-text,
+        & .cfb,
+        & .papercast {
+            opacity: 0;
+            visibility: hidden;
+        }
+
         & .testimonial {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            opacity: 0;
-            visibility: hidden;
-            transition: all .3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+            transition: all .5s ease;
             width: 100%;
             text-align: center;
-
-            &--active {
-                opacity: 1;
-                visibility: visible;
-            }
 
             & blockquote {
                 position: relative;
                 height: 100%;
-                margin: 0 auto 5rem auto;
+                margin: 0 auto 3rem auto;
                 width: 80%;
 
                 .open-quote,
@@ -473,12 +378,27 @@
     background-color: $light-grey;
     padding: 4rem 0;
 
+    @media only screen and (min-width: $device-small) {
+        padding: 6rem 0;
+    }
+
     & a {
         width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         transition: $fast-transition;
+
+        @media only screen and (min-width: $device-small) {
+            width: 61rem;
+            margin: 0 auto;
+        }
+
+        & span {
+            font-size: 2.6rem;
+            font-weight: 600;
+            list-style: 2.6rem;
+        }
 
         &:hover {
             padding: 0 2rem;
